[gd_scene load_steps=4 format=3 uid="uid://iw2bfip7cq36"]

[ext_resource type="Theme" uid="uid://b66cxik023bhq" path="res://WoodenTheme.tres" id="1_6bsfy"]
[ext_resource type="Script" uid="uid://dfjsc6c12rud8" path="res://Events/PeckishPeteRandomEvent.gd" id="2_6bsfy"]
[ext_resource type="Texture2D" uid="uid://b5liasy5k6ufx" path="res://Assets/Backgrounds/random_event_2.png" id="3_j5chg"]

[node name="PeckishPeteRandomEvent" type="Control"]
layout_mode = 3
anchors_preset = 0
theme = ExtResource("1_6bsfy")
script = ExtResource("2_6bsfy")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_j5chg")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="EndDialog" type="AcceptDialog" parent="CanvasLayer"]
unique_name_in_owner = true
initial_position = 1
theme = ExtResource("1_6bsfy")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -77.0
offset_top = -68.0
offset_right = 77.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2

[node name="BeetleList" type="VBoxContainer" parent="CanvasLayer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_6bsfy")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("1_6bsfy")

[node name="OpenChest" type="Button" parent="CanvasLayer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "OPEN CHEST"

[node name="Leave" type="Button" parent="CanvasLayer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "LEAVE"

[connection signal="confirmed" from="CanvasLayer/EndDialog" to="." method="_on_end_dialog_confirmed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/VBoxContainer/OpenChest" to="." method="_on_endure_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/VBoxContainer/Leave" to="." method="_on_leave_pressed"]
